force-app/main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>