force-app/main/default/objects/ExceptionLog__c/fields/Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>Exception_Details__c</fullName>
    <label>Exception Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>