force-app/main/default/objects/ExceptionLog__c/fields/isHandled__c.field-meta.xml
<CustomField>
    <fullName>isHandled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHandled</label>
    <type>Checkbox</type>
</CustomField>