force-app/main/default/objects/ExceptionLog__c/fields/Number_of_Times_Occured__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Occured__c</fullName>
    <label>Number of Times Occured</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>