force-app/main/default/objects/ExceptionLog__c/fields/Previous_Occurrence_Log__c.field-meta.xml
<CustomField>
    <fullName>Previous_Occurrence_Log__c</fullName>
    <label>Previous Occurrence Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>