force-app/main/default/objects/ExceptionLog__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Log</relationshipName>
    <type>Lookup</type>
</CustomField>