force-app/main/default/objects/ExceptionLog__c/fields/WS_CallingApplication__c.field-meta.xml
<CustomField>
    <fullName>WS_CallingApplication__c</fullName>
    <label>WS CallingApplication</label>
    <length>100</length>
    <type>Text</type>
</CustomField>