force-app/main/default/objects/ExceptionLog__c/fields/WS_CallingClass__c.field-meta.xml
<CustomField>
    <fullName>WS_CallingClass__c</fullName>
    <label>WS CallingClass</label>
    <length>100</length>
    <type>Text</type>
</CustomField>