force-app/main/default/objects/ExceptionLog__c/fields/WS_TransactionID__c.field-meta.xml
<CustomField>
    <fullName>WS_TransactionID__c</fullName>
    <label>WS TransactionID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>