force-app/main/default/objects/ExceptionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Org_Id__c</columns>
    <columns>Application_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Class_Name__c</columns>
    <columns>Method_Name__c</columns>
    <columns>Exception_Description__c</columns>
    <columns>Exception_Code__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>